--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "nodemon": "^3.1.11"
+    "axios": "^1.13.5",
+    "nodemon": "^3.1.11",
+    "react-router-dom": "^7.13.0"
   }
 }
