--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.13.5",
     "bcrypt": "^6.0.0",
+    "framer-motion": "^12.34.0",
     "jsonwebtoken": "^9.0.3",
     "nodemon": "^3.1.11",
     "react-router-dom": "^7.13.0"
