--- a/frontend/frontend/.gitignore
+++ b/frontend/frontend/.gitignore
@@ -22,3 +22,20 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Node
+node_modules/
+
+# Environment files
+.env
+.env.local
+backend/.env
+frontend/.env
+
+# SQLite database
+*.sqlite
+*.db
+
+# Build folders
+dist/
+build/
